        ============== rnumber release 1.12.1 (v1_12_1) on SunOS ==============

        ============== rnumber release 1.12.1 (v1_12_1) on SunOS ==============

2002-12-13  Todd Dukes  <Todd.Dukes@motorola.com>

	*  CDCpp33115 - fixed core dump on left and right shifts of integers
	   where the shift is an rnumber bigger than word size.

	* add perl operator overloading. There is some problem with shifting
	  integers by rnumbers that needs to be worked out.

2002-12-12  Todd Dukes  <Todd.Dukes@motorola.com>

	* perl added memory reclamation.
	

        ============== rnumber release 1.11.3 (v1_11_3) on SunOS ==============

        ============== rnumber release 1.11.3 (v1_11_3) on Linux ==============

        ============== rnumber release 1.11.3 (v1_11_3) on SunOS ==============

2002-12-09  Brian Kahne  <bkahne@ibmoto.com>

	* Got conditional install (cinstall) working.

        ============== rnumber release 1.11.2 (v1_11_2) on SunOS ==============

2002-12-05  Todd Dukes  <Todd.Dukes@motorola.com>

	*  perl: changed numericp to include both SvIOK and SvNOK.

        ============== rnumber release 1.11.1 (v1_11_1) on SunOS ==============

2002-12-05  Todd Dukes  <Todd.Dukes@motorola.com>

	*  perl: There is a problem with large integers (msb being set) not 
	   being considered to be integers by perl's SvIOK function. This is
	   what integerp uses to detect whether a variable is an integer or
	   not. I have resolved this by adding a new predicate numericp and
	   using that to determine whether a variable is numeric or not.

        ============== rnumber release 1.10.4 (v1_10_4) on SunOS ==============

        ============== rnumber release 1.10.3 (v1_10_3) on SunOS ==============

2002-11-22  Todd Dukes  <Todd.Dukes@motorola.com>

	* bug fixes and more simplification of Perl functions.

        ============== rnumber release 1.10.2 (v1_10_2) on SunOS ==============

2002-11-22  Todd Dukes  <Todd.Dukes@motorola.com>
