@@ -15,7 +15,7 @@
  (section
   :title "Installation Information"
   (paragraph
-   [RNumber is installed versioned directories under ,(code "/cad/tools/rnumber").] ))
+   [At Somerset, RNumber is installed in versioned directories under ,(code "/cad/tools/rnumber").] ))
  
 ;  (section
 ;   :title "Mailing List"
@@ -37,7 +37,7 @@
 
   (paragraph
     [RNumber is a faily mature library that has been used in the development of Raptor and
-	     Figleaf. User documentation is still pending.]))
+	     Figleaf at Somerset. ]))
 
  (section
   :title "Documentation"
@@ -49,10 +49,17 @@
   (paragraph
    [
 
-    Defects can be reported by using ,(ref :url
+    At Somerset, defects can be reported by using ,(ref :url
     "http://ddts.somerset.sps.mot.com/ddts/ddts_main" "DDTS"). The
     class is ,(code [CADTools]) and the project is ,(code
-    [rnumber]).]))
+    [rnumber]).]
+   )
+  (paragraph
+   [
+    Other sites should use ,(ref :url
+				 "https://sourceforge.mot.com/bugs/?func=addbug&group_id=16625"
+				 "this page").])
+  )
 
- [Mail comments about this page to ,(mailto :email "mailto:tdukes@ibmoto.com" "Todd Dukes")]
+ [Mail comments about this page to ,(mailto :email "mailto:Todd.Dukes@motorola.com" "Todd Dukes")]
  )
