@@ -1,3 +1,8 @@
+2003-01-06  Todd Dukes  <Todd.Dukes@motorola.com>
+
+	*  made documentation installation optional. Small modifications to
+	   documentation.
+
         ============== rnumber release 1.12.1 (v1_12_1) on SunOS ==============
 
         ============== rnumber release 1.12.1 (v1_12_1) on SunOS ==============
